src/objects/Lead_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Assigned_Time__c</fullName>
        <label>Lead Assigned Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Reassigned_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Reassigned Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Assignment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Reassigned_Time__c</fullName>
        <label>Lead Reassigned Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Assignment</relationshipLabel>
        <relationshipName>Lead_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Assignment</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Lead Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>